Added findAllworkerAssignments method to controller, yet to verify the workerAssignment Controller